HighContrast: Fix color chooser marks
The checkmark for the selected color was always black,
making it more or less invisible on dark colors.

https://bugzilla.gnome.org/show_bug.cgi?id=746368

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2142,6 +2142,8 @@ GtkColorSwatch {
   box-shadow: inset 0 1px 1px transparentize(black, 0.8);
 
   &.color-light {
+    color: black;
+    outline-color: transparentize(black, 0.7);
     &:hover {
       background-image: linear-gradient(to bottom,
                                         transparentize(white, 1) 40%,
@@ -2150,6 +2152,8 @@ GtkColorSwatch {
     }
   }
   &.color-dark {
+    color: white;
+    outline-color: transparentize(white, 0.5);
     &:hover {
        background-image: linear-gradient(to bottom,
                                         transparentize(white, 1) 40%,
